--- a/project1/Makefile
+++ b/project1/Makefile
@@ -1,6 +1,8 @@
 #this is a comment
 
 make4061: main.c util.c
+
+#comments gonna mess you up
 	gcc -o make4061 main.c util.c
 clean:
 	rm make4061 makeargv.o
